===== 2.5.0 (XXXX-XX-XX) =====

  * API CHANGE: Functions in Lwt_io that were previously using a
    ~buffer_size argument now takes a ~buffer argument.
  * Fix non-reentrant function calls (#136)
  * IPv4 multicast support
  * Minor fixes + documentation improvements

===== 2.4.8 (2015-03-11) =====

  * Fix compilation under Windows (#117, #129)
  * Fix Lwt_engine.on_timer (#121)
  * Add Lwt_log_core.reset_rules (#123)
  * Fixed typos in the documentation (#119, #131)

===== 2.4.7 (2015-01-06) =====

  * camlp4 is now optional.
  * Add safe_string compliance except for Lwt_ssl (need ocaml-ssl fix).
  * Add Lwt.Infix module to open instead of Lwt to have (>>=), etc.
  * Add Lwt_list.filter_map_{s,p} functions.
  * Add Lwt.fail_{with,invalid_arg} functions.
  * Improved Android support.
  * Remove deprecated lwt.text and lwt.top libraries.
  * Remove deprecated Lwt_signal and Lwt_event modules from
    lwt.react.
  * Fix #111: try_lwt wrongly warns about unused match case.
  * Fix #96: Fix Lwt_react.S.limit and Lwt_react.E.limit.
  * Fix #91: Workaround to fix compilation on OSX.

===== 2.4.6 (2014-10-12) =====

  * Add a ppx syntax extension
  * Add a ?fd argument to
    Lwt_io.{open_connection,with_connection,establish_server}.
  * Fix stub for getaddrinfo and getprotobyname
  * Windows fix: don't throw an exception in the notification handler
    if we're shutting down
  * Fix include file search in ./configure
  * ./configure fixes for windows
  * Fix: use sys_exit instead of exit when Unix.execv fails

===== 2.4.5 (2014-04-21) =====

  * Lwt_ssl: expand API to allow setting socket options with Ssl
    functions
  * fix for camlp4 trunk
  * support for React 1.0.0
  * add Lwt_sequence.find_node_* functions
  * Lwt_log: get backtrace early to overcome exns in
    Printexc.to_string
  * fix potential deadlock in lwt_unix_recv_notifications
  * lwt.glib fixes:
    - handle HUP
    - fix for BSD/OSX
  * do not raise an exception in Lwt_log if argv[0] is blank
